# duckdb

examples/embedded-c++/: CMakeLists.txt  example_main.cpp  main_test.cpp
src/common/enums/: logical_operator_type.cpp  statement_type.cpp
src/execution/: join_hashtable.cpp  physical_plan_generator.cpp
src/execution/operator/filter/: physical_filter.cpp
src/execution/operator/join/: CMakeLists.txt  physical_hash_join.cpp  physical_symmetric_hash_join.cpp
src/execution/physical_plan/: CMakeLists.txt  plan_comparison_join.cpp  plan_showSelect.cpp
src/function/table/: CMakeLists.txt
src/include/duckdb/common/enums/: logical_operator_type.hpp  statement_type.hpp
src/include/duckdb/common/types/: static_vector.hpp  vector.hpp
src/include/duckdb/execution/: join_hashtable.hpp  physical_operator.hpp  physical_plan_generator.hpp
src/include/duckdb/function/table/: sqlite_functions.hpp
src/include/duckdb/parser/: tokens.hpp  transformer.hpp
src/include/duckdb/parser/statement/: list.hpp
src/include/duckdb/planner/: binder.hpp
src/main/: client_context.cpp
src/parser/: transformer.cpp
src/parser/transform/helpers/: nodetype_to_string.cpp
src/parser/transform/statement/: CMakeLists.txt  transform_pragma.cpp  transform_show.cpp
src/planner/: CMakeLists.txt  binder.cpp  planner.cpp  pragma_handler.cpp
src/planner/binder/statement/: CMakeLists.txt  bind_show.cpp
test/sql/: CMakeLists.txt
test/sql/join/: CMakeLists.txt  test_left_outer_join_small.cpp
test/sql/pragma/: test_show_tables.cpp
test/sql/show_select/: test_show_select.cpp
(+4 files in other folders)
